--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>Partytown Test Cross Functional</title>
 </head>
 <body>
+  Test Report
   <ul>
+    <li><a href="partytown-atomics-chromium.html">Chromium with Atomics</a></li>
     <li><a href="partytown-chromium.html">Chromium</a></li>
     <li><a href="partytown-firefox.html">Firefox</a></li>
     <li><a href="partytown-webkit.html">WebKit</a></li>
