--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <title>Partytown Test Cross Functional</title>
 </head>
 <body>
-  Test Report
+  <h1>Test Report Locally</h1>
   <ul>
     <li><a href="partytown-atomics-chromium.html">Chromium with Atomics</a></li>
     <li><a href="partytown-chromium.html">Chromium</a></li>
     <li><a href="partytown-firefox.html">Firefox</a></li>
     <li><a href="partytown-webkit.html">WebKit</a></li>
   </ul>
-  <p></p>
+  <img src="assets/local.png" alt="spesification" height="300px">
 </body>
 </body>
 </body>
