--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Partytown Test Cross Functional</title>
 </head>
 <body>
-  <h1>Test Report Locally</h1>
+  <h1>Partytown Test Cross Functional</h1>
+  <h2>Test Report run in Locally</h2>
   <ul>
     <li><a href="partytown-atomics-chromium.html">Chromium with Atomics</a></li>
     <li><a href="partytown-chromium.html">Chromium</a></li>
