added: third-party without partytown

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <li><a href="partytown-firefox.html">Firefox</a></li>
     <li><a href="partytown-webkit.html">WebKit</a></li>
   </ul>
+  <h1>Third-party without partytown</h1>
+  <ul>
+    <li><a href="standard-chromium.html">Standard in chromium</a></li>
+  </ul>
   <img src="assets/local.png" alt="spesification" height="300px">
 </body>
 </body>
