updated: add link branch standard test

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   </ul>
   <h1>Third-party without partytown</h1>
   <ul>
-    <li><a href="standard-chromium.html">Standard in chromium</a></li>
+    <li>
+      <a href="standard-chromium.html">Standard in chromium</a> | 
+      <a href="https://github.com/ryfazrin/partytown/tree/test-standard">Branch Standard Test</a>
+    </li>
   </ul>
   <img src="assets/local.png" alt="spesification" height="300px">
 </body>
