added: Integrations Third-party in Chromium

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <li><a href="partytown-firefox.html">Firefox</a></li>
     <li><a href="partytown-webkit.html">WebKit</a></li>
   </ul>
-  <h1>Third-party without partytown</h1>
+  <h1>Integrations Third-party in Chromium</h1>
   <ul>
     <li>
-      <a href="standard-chromium.html">Standard in chromium</a> | 
+      <a href="integrations/standard-chromium.html">Standard in chromium</a> | 
       <a href="https://github.com/ryfazrin/partytown/tree/test-standard/tests/integrations">Branch Standard Test</a>
     </li>
+    <li><a href="integrations/partytown-service-worker-chromium.html">Partytown - Service Worker</a></li>
+    <li><a href="integrations/partytown-atomics-chromium.html">Partytown - Atomics</a></li>
   </ul>
   <img src="assets/local.png" alt="spesification" height="300px">
 </body>
